[gd_scene load_steps=62 format=3 uid="uid://kqso6bwn4xx0"]

[ext_resource type="Script" uid="uid://gxhpxsi4d07j" path="res://scripts/UI/menu.gd" id="1_vjb58"]
[ext_resource type="FontFile" uid="uid://73q660wrssg2" path="res://assets/fonts/IPix中文像素字体.ttf" id="1_yqeox"]
[ext_resource type="PackedScene" uid="uid://bt23ejdebo3ik" path="res://scenes/chapter/chapter_0.tscn" id="2_4ytvr"]
[ext_resource type="Texture2D" uid="uid://bsu0rymo6kifc" path="res://assets/canvas/Others/maytitle.png" id="3_70i5f"]
[ext_resource type="PackedScene" uid="uid://1irxdbgkp53j" path="res://scenes/UI/setting.tscn" id="3_ufwb2"]
[ext_resource type="Texture2D" uid="uid://dt4sdxigluw3a" path="res://assets/canvas/Others/character.png" id="4_4ytvr"]
[ext_resource type="Script" uid="uid://0w34jgtudcyd" path="res://scenes/titlemove.gd" id="4_mj5lg"]
[ext_resource type="Texture2D" uid="uid://yq3aaayvl11d" path="res://assets/canvas/Others/maybeaicon.png" id="4_v86rl"]
[ext_resource type="Texture2D" uid="uid://culppcsmyr08c" path="res://assets/canvas/Others/starsback.png" id="5_4ytvr"]
[ext_resource type="Texture2D" uid="uid://hati700nrxjq" path="res://assets/canvas/Others/maybeaicon2.png" id="5_13sgg"]
[ext_resource type="Texture2D" uid="uid://caqqoecfc588h" path="res://assets/canvas/Others/maybeaicon3.png" id="5_i6lef"]
[ext_resource type="Texture2D" uid="uid://bhfs6swfdah6b" path="res://assets/canvas/Others/realbackground.png" id="6_g3eks"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4ytvr"]
atlas = ExtResource("4_4ytvr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3eks"]
atlas = ExtResource("4_4ytvr")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v86rl"]
atlas = ExtResource("4_4ytvr")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_13sgg"]
atlas = ExtResource("4_4ytvr")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6lef"]
atlas = ExtResource("4_4ytvr")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_70i5f"]
atlas = ExtResource("4_4ytvr")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_mj5lg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ytvr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3eks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v86rl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_13sgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6lef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70i5f")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_13sgg"]
texture = ExtResource("4_v86rl")
texture_margin_left = 60.0
texture_margin_top = 20.0
texture_margin_right = 20.0
texture_margin_bottom = 20.0
region_rect = Rect2(0, 0, 192, 64)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_i6lef"]
texture = ExtResource("5_i6lef")
texture_margin_left = 60.0
texture_margin_top = 20.0
texture_margin_right = 20.0
texture_margin_bottom = 20.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_70i5f"]
texture = ExtResource("5_13sgg")
texture_margin_left = 60.0
texture_margin_top = 20.0
texture_margin_right = 20.0
texture_margin_bottom = 20.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mj5lg"]
texture = ExtResource("5_i6lef")
texture_margin_left = 60.0
texture_margin_top = 20.0
texture_margin_right = 20.0
texture_margin_bottom = 20.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i6lef"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6cdou"]
texture = ExtResource("4_v86rl")
texture_margin_left = 60.0
texture_margin_top = 20.0
texture_margin_right = 20.0
texture_margin_bottom = 20.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_i42df"]
texture = ExtResource("5_i6lef")
texture_margin_left = 60.0
texture_margin_top = 20.0
texture_margin_right = 20.0
texture_margin_bottom = 20.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7jp70"]
texture = ExtResource("5_13sgg")
texture_margin_left = 60.0
texture_margin_top = 20.0
texture_margin_right = 20.0
texture_margin_bottom = 20.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_70i5f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mj5lg"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ufwb2"]
texture = ExtResource("4_v86rl")
texture_margin_left = 60.0
texture_margin_top = 20.0
texture_margin_right = 20.0
texture_margin_bottom = 20.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mxgkd"]
texture = ExtResource("5_i6lef")
texture_margin_left = 60.0
texture_margin_top = 20.0
texture_margin_right = 20.0
texture_margin_bottom = 20.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_g6gyw"]
texture = ExtResource("5_13sgg")
texture_margin_left = 60.0
texture_margin_top = 20.0
texture_margin_right = 20.0
texture_margin_bottom = 20.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3dmrc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_81l6r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mhnvy"]
size = Vector2(177, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mj5lg"]
atlas = ExtResource("5_4ytvr")
region = Rect2(0, 0, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_ufwb2"]
atlas = ExtResource("5_4ytvr")
region = Rect2(320, 0, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cdou"]
atlas = ExtResource("5_4ytvr")
region = Rect2(640, 0, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_i42df"]
atlas = ExtResource("5_4ytvr")
region = Rect2(0, 180, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_7jp70"]
atlas = ExtResource("5_4ytvr")
region = Rect2(320, 180, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxgkd"]
atlas = ExtResource("5_4ytvr")
region = Rect2(640, 180, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6gyw"]
atlas = ExtResource("5_4ytvr")
region = Rect2(0, 360, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_3dmrc"]
atlas = ExtResource("5_4ytvr")
region = Rect2(320, 360, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_81l6r"]
atlas = ExtResource("5_4ytvr")
region = Rect2(640, 360, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_rsfmq"]
atlas = ExtResource("5_4ytvr")
region = Rect2(0, 540, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_oi1it"]
atlas = ExtResource("5_4ytvr")
region = Rect2(320, 540, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_fy8yy"]
atlas = ExtResource("5_4ytvr")
region = Rect2(640, 540, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wigr"]
atlas = ExtResource("5_4ytvr")
region = Rect2(0, 720, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_lnf0i"]
atlas = ExtResource("5_4ytvr")
region = Rect2(320, 720, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffqrc"]
atlas = ExtResource("5_4ytvr")
region = Rect2(640, 720, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_x16fv"]
atlas = ExtResource("5_4ytvr")
region = Rect2(0, 900, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_g54pe"]
atlas = ExtResource("5_4ytvr")
region = Rect2(320, 900, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_48ryc"]
atlas = ExtResource("5_4ytvr")
region = Rect2(640, 900, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhsb5"]
atlas = ExtResource("5_4ytvr")
region = Rect2(0, 1080, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwfsl"]
atlas = ExtResource("5_4ytvr")
region = Rect2(320, 1080, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_a04p5"]
atlas = ExtResource("5_4ytvr")
region = Rect2(640, 1080, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5gwo"]
atlas = ExtResource("5_4ytvr")
region = Rect2(0, 1260, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ndyk"]
atlas = ExtResource("5_4ytvr")
region = Rect2(320, 1260, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qewb"]
atlas = ExtResource("5_4ytvr")
region = Rect2(640, 1260, 320, 180)

[sub_resource type="SpriteFrames" id="SpriteFrames_mhjd8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mj5lg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ufwb2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cdou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i42df")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7jp70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxgkd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6gyw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dmrc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_81l6r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rsfmq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oi1it")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fy8yy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wigr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lnf0i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffqrc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x16fv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g54pe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48ryc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhsb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwfsl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a04p5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5gwo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ndyk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qewb")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="Environment" id="Environment_ufwb2"]
background_mode = 3
glow_enabled = true
glow_bloom = 0.07
glow_blend_mode = 1

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vjb58")
next_scene = ExtResource("2_4ytvr")
setting_scene = ExtResource("3_ufwb2")

[node name="title" type="Sprite2D" parent="."]
position = Vector2(152.025, 86.665)
scale = Vector2(0.96, 0.96)
texture = ExtResource("3_70i5f")
offset = Vector2(-63.01, 0)
script = ExtResource("4_mj5lg")

[node name="Player" type="AnimatedSprite2D" parent="title"]
position = Vector2(3.065, -18.285)
rotation = -0.23736478
scale = Vector2(1.78, 1.78)
sprite_frames = SubResource("SpriteFrames_mj5lg")
autoplay = "default"

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -127.354996
offset_top = -75.29
offset_right = 16.645752
offset_bottom = 103.71001
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.835, 0.835)

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_yqeox")
theme_override_styles/normal = SubResource("StyleBoxTexture_13sgg")
theme_override_styles/pressed = SubResource("StyleBoxTexture_i6lef")
theme_override_styles/hover = SubResource("StyleBoxTexture_70i5f")
theme_override_styles/disabled = SubResource("StyleBoxTexture_mj5lg")
theme_override_styles/focus = SubResource("StyleBoxEmpty_i6lef")
text = "开始游戏"

[node name="SettingButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_yqeox")
theme_override_styles/normal = SubResource("StyleBoxTexture_6cdou")
theme_override_styles/pressed = SubResource("StyleBoxTexture_i42df")
theme_override_styles/hover = SubResource("StyleBoxTexture_7jp70")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_70i5f")
theme_override_styles/focus = SubResource("StyleBoxEmpty_mj5lg")
text = "设置"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_yqeox")
theme_override_styles/normal = SubResource("StyleBoxTexture_ufwb2")
theme_override_styles/pressed = SubResource("StyleBoxTexture_mxgkd")
theme_override_styles/hover = SubResource("StyleBoxTexture_g6gyw")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_3dmrc")
theme_override_styles/focus = SubResource("StyleBoxEmpty_81l6r")
text = "退出游戏"

[node name="Title" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -131.0
offset_top = 23.0
offset_right = 25.0
offset_bottom = 72.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_yqeox")
theme_override_font_sizes/font_size = 48
text = "FinD"

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
visible = false
position = Vector2(87.5, 155)
shape = SubResource("RectangleShape2D_mhnvy")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
z_index = -10
position = Vector2(160, 90)
sprite_frames = SubResource("SpriteFrames_mhjd8")
autoplay = "default"

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -10
position = Vector2(160, 90)
texture = ExtResource("6_g3eks")

[node name="Setting" parent="." instance=ExtResource("3_ufwb2")]
layout_mode = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ufwb2")

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingButton" to="." method="_on_setting_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
